package it.unipv.posw.careconnectpro.model.persona;

public enum TipoUtente {
	
	PAZIENTE, MEDICO, AMMINISTRATORE, INFERMIERE;

}
