@startuml
'https://plantuml.com/class-diagram


package "Personsa" <<Folder>> {

abstract class Persona {
- TipoUtente tipoUtente
- String codiceFiscale
- String nome
- String cognome;
- LocalDate dataNascita, dataInizio
- String email
- String cellulare
- String password
+ getters - setters ()
}

enum TipoUtente{
PAZIENTE
MEDICO
AMMINISTRATORE
INFERMIERE

}

class Paziente {
+getIdPaziente()
+setIdPaziente (int idPaziente)
}
package "Dipendenti" <<Folder>> {

    class Dipendente{
    + setPassword()
    }

    class Infermiere {
    - TipoUtente TipoUtente.Infermiere
    }

    class Amministratore {
    - TipoUtente TipoUtente.Amministratore
    }

    class Medico {
    - TipoUtente TipoUtente.Medico
    }

    class FactoryDipendente << (F,#FFF2CC) Factory >>{
    + Dipendente getDipendente()
    }
}
' Fine Dipendente

}

package "rsa" <<Folder>> {

class IRSA << (I, #B3E5FC) interface>>{
boolean registraUtente(Persona p)
boolean disattivaUtente(String cf)
int creaCartellaClinica(CartellaClinica cc)
int creaTerapia(Terapia t)
int creaMonitoraggio(Monitoraggio m)
List<Monitoraggio> getMonitoraggiConAlertAttivo()
boolean risolviAlertMonitoraggio(Monitoraggio m)
Monitoraggio cercaMonitoraggioById(int id)
Persona getUtenteLoggato()
Dipendente cercaDipendenteByCf(String cf)
Paziente cercaPazienteByCf(String cf)
CartellaClinica cercaCartellaClinicaByCf(String cf)
List<Paziente> cercaPazienti()
}

class RSAService{
}

}
' Fine package rsa



' Relazioni
Persona *-- TipoUtente
Persona <|--  Dipendente
Persona <|-- Paziente
Dipendente <|-- Infermiere
Dipendente <|-- Medico
Dipendente <|-- Amministratore


@enduml